# super_mpc

./: .gitignore
mpc_msgs/: CMakeLists.txt
px4_mpc/: package.xml
px4_mpc/px4_mpc/: mpc_quadrotor.py  mpc_quadrotor_working.py
px4_mpc/px4_mpc/controllers/: multirotor_rate_mpc.py
px4_mpc/px4_mpc/launch/: mpc_quadrotor_launch.py  mpc_spacecraft_launch.py
px4_mpc/px4_mpc/models/: multirotor_rate_model.py
scripts/: source_acados_env.sh
