<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_mpc</name>
  <version>0.1.0</version>
  <description>MPC-based quadrotor control using MAVROS</description>
  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>
  <maintainer email="padr@kth.se">Pedro Roque</maintainer>
  <license>BSD-3</license>

  <depend>rclpy</depend>
  <depend>mavros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mars_quadrotor_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
